class Estudiante {
    constructor(matricula, cedula, nombres, apellidos, genero) {
        this.matricula = matricula
      this.cedula = cedula
      this.nombres = nombres
      this.apellidos = apellidos
      this.genero = genero
      this.ciudad = ciudad
    }
  
  }
  
  
  export default Estudiante